agregando cambio al commit

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+  <div height="100%">
+	<img src="header.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
+	<img src="hero.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
+  </div>
   </body>
 </html>
