--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<img src="header.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
 	<img src="hero.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
 	<img src="acustica.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
+	<img src="clasica.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
   </div>
   </body>
 </html>
