modificacion a rama borde rojo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html>
   <head>
+	<style media="screen">
+		body {
+			margin: 0;
+			border: 10px solid red;
+		}
+		img {
+			margin: 0 ;
+			max-width:100%;
+			vertical-align: top;
+		}
+	</style>
     <title>This is the title of the webpage!</title>
   </head>
   <body>
