nueva version  rama nueva -version

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
   </head>
   <body>
   <div height="100%">
-	<img src="header.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
-	<img src="hero.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
-	<img src="acustica.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
-	<img src="clasica.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
+	<img src="nueva-version.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
   </div>
   </body>
 </html>
