--- a/index.html
+++ b/index.html
@@ -2,13 +2,33 @@
 <html>
   <head>
     <title>This is the title of the webpage!</title>
+	<style>
+		body{
+			margin= 0;
+		}
+		img {
+			max-width : 100%;
+			vertical-align:top;
+		}
+		img#responsive{
+			display:none
+		}
+		@media screen and (max-width:768px){
+			img{
+				display:none
+			}
+			img#responsive{
+				display:block
+			}
+		}
+	</style>
   </head>
   <body>
   <div height="100%">
-	<img src="header.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
-	<img src="hero.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
-	<img src="acustica.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
-	<img src="clasica.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
+	<img src="invie-responsive.png" id="responsive" alt="" >
+	<img src="hero.jpg" alt="" >
+	<img src="acustica.jpg" alt="" >
+	<img src="clasica.jpg" alt="" >
   </div>
   </body>
 </html>
